Improve Software.Config structure
